--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,28 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #ffffff;
-
 }
-a{
+a {
   color: #ffffff;
 }
 
+.btn {
+  display: block;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 2px;
+  text-align: center;
+  text-decoration: none;
+  /* padding: 19px 54px; */
+  /* text-decoration: none; */
+  /* margin-top: 44px; */
+  /* width: 240px; */
+}
+
+.btn:hover{
+  opacity: .4;
+  color: black;
+}
 
 .nr-header {
   position: absolute;
@@ -32,10 +48,16 @@ a{
   margin-left: 45px; /*left first*/
 }
 
-.nr-top-menu__items a{
+.nr-top-menu__items a {
   color: black;
   text-decoration: none;
 }
+
+.nr-top-menu__items a:hover {
+  /* text-decoration: ;  */
+  color: #fb565a;
+}
+
 .nr-top-cart {
   font-weight: 500;
 }
@@ -50,7 +72,6 @@ a{
 .nr-section1-left {
   max-width: 380px;
   /* height: 100%; */
-
 }
 .nr-section1-left__title {
   font-size: 55px;
@@ -62,62 +83,54 @@ a{
   font-weight: 400;
 }
 .nr-section1-left__btn {
-  display: block;
   background-color: #fb565a;
-  text-transform: uppercase;
-  border: 0;
-  border-radius: 2px;
   padding: 19px 54px;
-  text-align: center;
-  text-decoration: none;
   margin-top: 44px;
   width: 240px;
 }
-.nr-section1-left__btn:hover {
+/* .nr-section1-left__btn:hover {
   background-color: #f8888b;
-}
+} */
 
-.nr-section2{
+.nr-section2 {
   min-height: 508px;
-
 }
 
-.nr-info-block{
+.nr-info-block {
   max-width: 300px;
-
 }
-.nr-info-block-text__title{
+.nr-info-block-text__title {
   font-size: 24px;
   font-weight: 700;
 }
-.nr-info-block-text__descr{
-  
+.nr-info-block-text__descr {
 }
 
-.nr-info-block-bottom__btn{
+.nr-info-block-bottom__btn {
   padding: 18px 40px;
   text-decoration: none;
+  display: block;
+  text-align: center;
+  width: 161px;
 }
 
-.nr-info-block__1{
+.nr-info-block__1 {
   background-color: #fb565a;
-
 }
-.nr-info-block__2{
+.nr-info-block__2 {
   background-color: #00ca74;
 }
-.nr-info-block__3{
+.nr-info-block__3 {
   background-color: #efc84a;
 }
 
-.nr-section3{
-
+.nr-section3 {
 }
-.nr-section3-wrapper{
+.nr-section3-wrapper {
   display: flex;
 }
 
-.nr-section3-left__title{
+.nr-section3-left__title {
   font-size: 43px;
   font-weight: 500;
 }
@@ -125,38 +138,69 @@ a{
 
 
 
-.nr-section4{
+
+
+.nr-section3-right-wrapper2{
+  display: flex;
+}
+
+.nr-section4 {
   min-height: 340px;
 }
 
-.nr-section4-wrapper{
+.nr-section4-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nr-section5{
+.nr-section5 {
   background-image: url(../img/map.jpg);
   min-height: 418px;
   background-size: cover;
   background-repeat: no-repeat;
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
-.nr-footer{
+.nr-section5-about {
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  position: absolute;
+  width: 320px;
+  height: 310px;
+  background-color: #fff;
+}
+
+.nr-section5-about-wrapper {
+  padding: 50px;
+  height: 100%;
+}
+
+.nr-section5-about__btn {
+  display: block;
+  background-color: #fb565a;
+  padding: 18px 45px;
+  width: 100%;
+}
+
+.nr-footer {
   display: flex;
   /* align-items: center; */
   max-height: 217px;
 }
 
-.nr-footer-wrapper{
+.nr-footer-wrapper {
   display: flex;
   padding: 68px 0;
 }
-.nr-social__list{
+.nr-social__list {
   display: flex;
 }
 
-.nr-social__items{
+.nr-social__items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,15 +211,19 @@ a{
   margin-left: 13px;
 }
 
-.nr-footer-text{
+.nr-social__items:hover{
+  background-color: rgb(23, 62, 236);
+}
+
+.nr-footer-text {
   margin: 0 auto;
 }
 
-.nr-footer-text__title{
+.nr-footer-text__title {
   font-size: 36px;
   font-weight: 700;
 }
-.nr-footer-text__descr{
+.nr-footer-text__descr {
   font-size: 16px;
   font-weight: 400;
 }
