--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,8 @@ a {
   justify-content: space-between;
   align-items: center;
 }
-.nr-top-logo {
+.nr-top-logo:hover {
+  transform: scale(1.2); /* Увеличиваем масштаб */
 }
 .nr-top-menu {
   display: flex;
@@ -236,7 +237,7 @@ a {
   display: flex;
   align-items: center;
 }
-.nr-customers a img:hover{
+.nr-customers a img:hover {
   transform: scale(1.2); /* Увеличиваем масштаб */
 }
 
